hphp/hack/test/typecheck/collection_unexpected_arrow_immvector_legacy.php
<?hh

function test(): void {
  // Using key => value in a value-only collection (ImmVector)
  $x = ImmVector {'key' => 'value'};
}
